--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 				This is my first webpage! I was able to code all the HTML and CSS in order to make it. Watch out world of web design here I come!
 			</p>
 			<p> 
-				My name is Cristina. CRG. aqui ay faltas de hortografia. Hay que correjirlas 
+				My name is Cristina. CRG. Aquí ya no hay faltas de ortografía. Ya están corregidas.
 			</p>
 		</div>
 		<div id="footer">
